--- a/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
@@ -1,24 +1,24 @@
 ﻿l_english:
 ### Parties ###
-NIC_totalist_party_long:0 "Partido Nacional Revolucionario"
+NIC_totalist_party_long:0 "국가 혁명당"
 NIC_totalist_party:0 "PNR"
-NIC_syndicalist_party_long:0 "Partido Socialista Nicaragüense"
+NIC_syndicalist_party_long:0 "니카라과 사회당"
 NIC_syndicalist_party:0 "PSN"
-NIC_radical_socialist_party_long:0 "Frente de Soberanía Nacional"
+NIC_radical_socialist_party_long:0 "국민주권전선"
 NIC_radical_socialist_party:0 "FSN"
-NIC_social_democrat_party_long:0 "Partido Campesino de Nicaragua"
+NIC_social_democrat_party_long:0 "니카라과 농민당"
 NIC_social_democrat_party:0 "PCN"
-NIC_social_liberal_party_long:0 "Partido de la Revolución Liberal"
+NIC_social_liberal_party_long:0 "자유주의혁명당"
 NIC_social_liberal_party:0 "PRL"
-NIC_market_liberal_party_long:0 "Partido Liberal Constitucionalista"
+NIC_market_liberal_party_long:0 "자유 헌정주의당"
 NIC_market_liberal_party:0 "PLC"
-NIC_social_conservative_party_long:0 "Partido Conservador"
+NIC_social_conservative_party_long:0 "보수당"
 NIC_social_conservative_party:0 "PC"
-NIC_authoritarian_democrat_party_long:0 "Partido Liberal Nacionalista"
+NIC_authoritarian_democrat_party_long:0 "자유 국민당"
 NIC_authoritarian_democrat_party:0 "PLN"
-NIC_paternal_autocrat_party_long:0 "Unión Nacional Opositora"
+NIC_paternal_autocrat_party_long:0 "국가 야당연합"
 NIC_paternal_autocrat_party:0 "UNO"
-NIC_national_populist_party_long:0 "Alianza por la República"
+NIC_national_populist_party_long:0 "공화연합"
 NIC_national_populist_party:0 "AL"
 
 ### Tooltips ###
@@ -258,19 +258,19 @@ NIC_yank_promise_2:0 "Yank's Promise"
 NIC_yank_promise_2_desc:0 "Yank has been with our country ever since the revolution, training our army in the way of guerrilla warfare. However, he had always played more of an observational role up until now. He's been trying to ensure the entire army is ready for the final conflict full time, dedicating himself fully to our revolution."
 
 ### Events ###
-nic.1.t:0 "The New Republic of Nicaragua"
+nic.1.t:0 "니카라과의 새로운 공화국"
 nic.1.d:0 "The American occupation of Nicaragua and reinstallation of Adolfo Díaz effectively made Nicaragua an American puppet state. Fortunately, however, hope was not entirely lost. Liberals across the country rose in armed rebellion to topple the American puppet regime, and eventually succeeded when the fall of the capital forced Adolfo Díaz to flee to America. The new liberal regime however, brought very little change and continued to collaborate with the Americans under former Liberal revolutionary José María Moncada. The creation of a militarised national police force known as the 'National Guard' under Anastasio Somoza García with the help of United States Marines further cemented the continuation of the status quo.\n\nDissatisfied with the direction of the new government, several former liberal revolutionaries such as Juan Bautista Sacasa left the country. Others returned to armed revolt: the young Francisco Sequeira Moreno organised resistance in the north near the border with Honduras, while Augusto César Sandino launched an insurgency in the South. Harried by forces loyal to the regime, Moreno's northern resistance of 400 men managed to retreat south and join with Sandino and his 300-man regiment. This new consolidated force slowly began to retreat into the southern jungles while gaining expertise in guerilla warfare.\n\nHowever, this could not last forever. Increasingly desperate, Sandino fled to Mexico by plane in an attempt to elicit foreign support while Moreno continued the fight. While in Mexico, Sandino met with Emiliano Zapata and the two found not only common ground, but even became fast friends. Further bolstered by materiel support from both the Commune of France and Union of Britain, Zapata personally accompanied Sandino back to Nicaragua along with a small force of Mexican volunteers.\n\nHis position improved, Sandino's domestic support began to grow massively, and his revolutionaries began to fight their way north. Once flagging morale boosted by Sandino's newfound success, Syndicalist protests erupted in the capital, and the approach of the revolutionary army led to the Marines' retreat to the country's east. The Americans judged the situation of the underdeveloped National Guard hopeless and the cost of the Marines continuing to hold the capital prohibitively high. Soon after, the 'Liberals' and their National Guard dogs escaped to Honduras, leaving the capital open to Sandino's final push. Along with this, Sacasa who retreated to Mexico due to his hate of the former government returned to help in the formation of the Revolutionary Government."
 nic.1.a:0 "For the revolution!"
 
-nic.2.t:0 "Liberation Day"
+nic.2.t:0 "해방의 날"
 nic.2.d:0 "Today is the anniversary of the revolution which liberated our nation from the Americans and their lapdogs. While Sacasa and Moreno were both involved in the revolution, Sandino is more widely credited for the revolution's success. Sandino's popularity has increased because of the celebrations, but to supporters of opposition parties, the day has only further their disdain for the man. They claim that this celebration with all its cult-like pomp and circumstance is 'Sandino trying to brainwash the population'"
 nic.2.a:0 "Central America is next"
 
-nic.3.t:0 "Sacasa Travels Across the Country"
+nic.3.t:0 "사카사가 전국을 순회하다."
 nic.3.d:0 "With the recent celebrations of Liberation Day, Sandino and his supporters have a slight edge in popularity over the other parties. To counter this, Sacasa has begun a countrywide tour to meet with constituents in hopes of securing their vote come April. While so far, the campaign seems to have been a success, Sandino's supporters, known as 'Sandinistas', now claim that Sacasa is disrespecting the Liberation Day holiday and Sandino himself with this move. Some prominent Sandinistas have even called for violence against Sacasa himself."
 nic.3.a:0 "These elections will be intense, it seems"
 
-nic.4.t:0 "Sacasa Speaks Out"
+nic.4.t:0 "사카사가 꺼리낌없이 말하다."
 nic.4.d:0 "While abroad I had the pleasure of the company of many good natured men of influence, and the fortune to learn the fundamentals of good governance and political practice. I now realize that to attribute our present state of isolation to some global conspiracy would be foolish. The nations of the world, on the whole anyway, are good. We would be better served to stand together with those who would have us against the imperialist tendencies of the great powers of the world. The dream of the liberation of all Central America, and perhaps even the independence of Nicaragua itself, rests on our own willingness to employ greater moderation in our foreign policy. The present perversion of liberal thought in our nation is sad indeed, and I say here today, we must no longer turn our backs on destiny. Thank you!'\n\nFierce applause followed."
 nic.4.a:0 "A complete 180 for the PRL!"
 
