--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -440,7 +440,7 @@ VICTORY_POINTS_6313:0 "리머릭"
 VICTORY_POINTS_6318:0 "맨체스터"
 VICTORY_POINTS_6332:0 "쾨니히스베르크"
 VICTORY_POINTS_6338:0 "카잔"
-VICTORY_POINTS_6363:0 "뱅거" #End
+VICTORY_POINTS_6363:0 "뱅거"
 VICTORY_POINTS_6364:0 "오르후스"
 VICTORY_POINTS_6377:0 "하노버"
 VICTORY_POINTS_6380:0 "모스크바"
@@ -454,10 +454,12 @@ VICTORY_POINTS_6488:0 "프랑크푸르트"
 VICTORY_POINTS_6496:0 "에인트호번"
 VICTORY_POINTS_6521:0 "베를린"
 VICTORY_POINTS_6524:0 "에르푸르트"
+VICTORY_POINTS_6526:0 "트루로"
 VICTORY_POINTS_6535:0 "뮌스터"
 VICTORY_POINTS_6536:0 "로리엔트"
 VICTORY_POINTS_6558:0 "포젠"
 VICTORY_POINTS_6560:0 "헨트"
+VICTORY_POINTS_6568:0 "만하임"
 VICTORY_POINTS_6570:0 "뒤셀도르프"
 VICTORY_POINTS_6573:0 "코시체"
 VICTORY_POINTS_6583:0 "룩셈부르크"
@@ -465,24 +467,34 @@ VICTORY_POINTS_6598:0 "안트베르펜"
 VICTORY_POINTS_6606:0 "볼로냐"
 VICTORY_POINTS_6613:0 "리옹"
 VICTORY_POINTS_6626:0 "트리에스테"
-VICTORY_POINTS_6642:0 "카판"##############
+VICTORY_POINTS_6642:0 "카판"
+VICTORY_POINTS_6647:0 "오시예크"
 VICTORY_POINTS_6652:0 "크라이오바"
 VICTORY_POINTS_6657:0 "라로셸"
 VICTORY_POINTS_6666:0 "제네바"
+VICTORY_POINTS_6673:0 "클라겐푸르트"
+VICTORY_POINTS_6675:0 "보첸"
+VICTORY_POINTS_6679:0 "너지세벤"
 VICTORY_POINTS_6682:0 "아라드"
 VICTORY_POINTS_6696:0 "루이빌"
+VICTORY_POINTS_6700:0 "세게드"
+VICTORY_POINTS_6703:0 "세케슈페헤르바르"
 VICTORY_POINTS_6706:0 "갈라치"
 VICTORY_POINTS_6710:0 "디트로이트"
 VICTORY_POINTS_6711:0 "콜로즈바르"
+VICTORY_POINTS_6720:0 "죄르"
 VICTORY_POINTS_6727:0 "체타테아알버"
 VICTORY_POINTS_6732:0 "보스턴"
 VICTORY_POINTS_6766:0 "툴루즈"
+VICTORY_POINTS_6769:0 "랜싱"
 VICTORY_POINTS_6780:0 "토리노"
 VICTORY_POINTS_6786:0 "생테티엔"
 VICTORY_POINTS_6788:0 "제노아"
 VICTORY_POINTS_6790:0 "파르마"
+VICTORY_POINTS_6831:0 "페스카라"
 VICTORY_POINTS_6845:0 "필라데피아"
 VICTORY_POINTS_6855:0 "콜럼버스"
+VICTORY_POINTS_6880:0 "파루"
 VICTORY_POINTS_6882:0 "뉴어크"
 VICTORY_POINTS_6890:0 "클리블랜드"
 VICTORY_POINTS_6906:0 "발렌치아"
@@ -490,6 +502,7 @@ VICTORY_POINTS_6907:0 "살라망카"
 VICTORY_POINTS_6923:0 "플로브디프"
 VICTORY_POINTS_6966:0 "타라고나"
 VICTORY_POINTS_6973:0 "라스페치아"
+VICTORY_POINTS_6983:0 "바냐루카"
 VICTORY_POINTS_6984:0 "볼티모어"
 VICTORY_POINTS_6994:0 "아오모리"
 VICTORY_POINTS_6999:0 "충칭"
@@ -534,10 +547,11 @@ VICTORY_POINTS_7340:0 "얀남"
 VICTORY_POINTS_7344:0 "콜롬보"
 VICTORY_POINTS_7361:0 "핼리팩스"
 VICTORY_POINTS_7370:0 "악트에빈스크"
-VICTORY_POINTS_7371:0 "반다르브루나이"
+VICTORY_POINTS_7371:0 "브루나이"
 VICTORY_POINTS_7375:0 "페름"
 VICTORY_POINTS_7376:0 "프놈펜"
 VICTORY_POINTS_7381:0 "바타비아"
+VICTORY_POINTS_7386:0 "올림피아"
 VICTORY_POINTS_7394:0 "코르크"
 VICTORY_POINTS_7402:0 "티루바난타푸람"
 VICTORY_POINTS_7408:0 "방콕" #방콕
@@ -545,16 +559,19 @@ VICTORY_POINTS_7418:0 "시안"
 VICTORY_POINTS_7421:0 "반둥"
 VICTORY_POINTS_7427:0 "믈라카" #믈라카
 VICTORY_POINTS_7447:0 "코친"
+VICTORY_POINTS_7462:0 "오거스타"
 VICTORY_POINTS_7476:0 "벨루오리존치"
 VICTORY_POINTS_7480:0 "모빌"
 VICTORY_POINTS_7500:0 "로사리오"
 VICTORY_POINTS_7520:0 "뉴캐슬"
+VICTORY_POINTS_7527:0 "콜럼비아"
 VICTORY_POINTS_7552:0 "뉴올리언스"
 VICTORY_POINTS_7561:0 "주아제이루 두 노르테"
 VICTORY_POINTS_7562:0 "시포"
 VICTORY_POINTS_7564:0 "브리즈번"
 VICTORY_POINTS_7566:0 "타운즈빌"
 VICTORY_POINTS_7572:0 "펫차분"
+VICTORY_POINTS_7588:0 "찰스턴"
 VICTORY_POINTS_7590:0 "관타나모"
 VICTORY_POINTS_7594:0 "노부암부르구"
 VICTORY_POINTS_7603:0 "타웅지"
@@ -562,7 +579,6 @@ VICTORY_POINTS_7616:0 "블라고베셴스크"
 VICTORY_POINTS_7617:0 "콜론"
 VICTORY_POINTS_7621:0 "마르델플라타"
 VICTORY_POINTS_7622:0 "아바나"
-VICTORY_POINTS_7630:0 "파나마 시티"
 VICTORY_POINTS_7636:0 "상조제두히우프레투"
 VICTORY_POINTS_7638:0 "리오그란데"
 VICTORY_POINTS_7645:0 "스퉁트렝" #치앙톙/샹톙
@@ -570,8 +586,10 @@ VICTORY_POINTS_7656:0 "카이펑"
 VICTORY_POINTS_7660:0 "산토 도밍고"
 VICTORY_POINTS_7661:0 "바쿠"
 VICTORY_POINTS_7669:0 "다윈"
+VICTORY_POINTS_7779:0 "헬레나"
 VICTORY_POINTS_7798:0 "멜버른"
 VICTORY_POINTS_7799:0 "울리아스타이"
+VICTORY_POINTS_7836:0 "오스틴"
 VICTORY_POINTS_7859:0 "캔버라"
 VICTORY_POINTS_7899:0 "선더베일"
 VICTORY_POINTS_7909:0 "치앙퉁" #켕퉁
@@ -601,7 +619,6 @@ VICTORY_POINTS_8136:0 "오나제나"
 VICTORY_POINTS_8143:0 "아라카주"
 VICTORY_POINTS_8149:0 "이키토스"
 VICTORY_POINTS_8157:0 "코차밤바"
-VICTORY_POINTS_8179:0 "테레지나"
 VICTORY_POINTS_8181:0 "쿠리치바"
 VICTORY_POINTS_8183:0 "탕가"
 VICTORY_POINTS_8190:0 "카보 프리오"
@@ -617,17 +634,23 @@ VICTORY_POINTS_8245:0 "로렌소마르케스"
 VICTORY_POINTS_8248:0 "루안다"
 VICTORY_POINTS_8252:0 "과야킬"
 VICTORY_POINTS_9108:0 "룰레오"
+VICTORY_POINTS_9161:0 "인버네스"
 VICTORY_POINTS_9206:0 "비푸리"
 VICTORY_POINTS_9221:0 "도르파트"
 VICTORY_POINTS_9262:0 "리바우"
 VICTORY_POINTS_9279:0 "말뫼"
+VICTORY_POINTS_9239:0 "옥스포드"
 VICTORY_POINTS_9288:0 "고멜"
+VICTORY_POINTS_9289:0 "마힐료우"
 VICTORY_POINTS_9292:0 "첼랴빈스크"
 VICTORY_POINTS_9297:0 "버밍험"
+VICTORY_POINTS_9303:0 "갈웨이"
+VICTORY_POINTS_9315:0 "셰필드"
 VICTORY_POINTS_9335:0 "레이와르덴"
 VICTORY_POINTS_9340:0 "리가"
 VICTORY_POINTS_9347:0 "함부르크"
 VICTORY_POINTS_9355:0 "오룔"
+VICTORY_POINTS_9361:0 "콜베르크"
 VICTORY_POINTS_9379:0 "리즈"
 VICTORY_POINTS_9392:0 "에든버러"
 VICTORY_POINTS_9417:0 "로스토프나도누"
@@ -649,30 +672,43 @@ VICTORY_POINTS_9508:0 "우치"
 VICTORY_POINTS_9509:0 "빌레펠트"
 VICTORY_POINTS_9517:0 "슈투트가르트"
 VICTORY_POINTS_9522:0 "아헨"
+VICTORY_POINTS_9546:0 "칼리시"
+VICTORY_POINTS_9548:0 "체르니우치"
 VICTORY_POINTS_9559:0 "메스"
 VICTORY_POINTS_9560:0 "할레"
+VICTORY_POINTS_9567:0 "오스트라바"
 VICTORY_POINTS_9570:0 "브레슬라우"
+VICTORY_POINTS_9600:0 "루가노"
 VICTORY_POINTS_9605:0 "부하라"
 VICTORY_POINTS_9606:0 "티미쇼아라"
 VICTORY_POINTS_9613:0 "우디네"
+VICTORY_POINTS_9616:0 "보이시"
 VICTORY_POINTS_9617:0 "부쿠레슈티"
+VICTORY_POINTS_9621:0 "서버드커"
 VICTORY_POINTS_9620:0 "베른"
 VICTORY_POINTS_9628:0 "블라디캅카스"
 VICTORY_POINTS_9627:0 "라이바하"
 VICTORY_POINTS_9635:0 "키우스텐자" #키우스톈자
+VICTORY_POINTS_9638:0 "바젤"
 VICTORY_POINTS_9642:0 "브장송"
 VICTORY_POINTS_9660:0 "부다페스트"
+VICTORY_POINTS_9663:0 "소치"
+VICTORY_POINTS_9665:0 "린츠"
 VICTORY_POINTS_9671:0 "샌 프란시스코"
+VICTORY_POINTS_9673:0 "알바니"
 VICTORY_POINTS_9713:0 "새크라멘토"
 VICTORY_POINTS_9716:0 "이아시"
 VICTORY_POINTS_9737:0 "보르도"
 VICTORY_POINTS_9748:0 "클레르몽페랑"
 VICTORY_POINTS_9752:0 "모데나"
 VICTORY_POINTS_9753:0 "아스트라한"
+VICTORY_POINTS_9758:0 "도버"
 VICTORY_POINTS_9764:0 "바르셀로나"
 VICTORY_POINTS_9772:0 "사사리"
+VICTORY_POINTS_9780:0 "슈코더르"
 VICTORY_POINTS_9783:0 "바르나"
 VICTORY_POINTS_9784:0 "바리"
+VICTORY_POINTS_9794:0 "테르니"
 VICTORY_POINTS_9809:0 "프드고리차"
 VICTORY_POINTS_9814:0 "로스앤젤레스"
 VICTORY_POINTS_9817:0 "포르토"
@@ -680,9 +716,12 @@ VICTORY_POINTS_9832:0 "프로비던스"
 VICTORY_POINTS_9833:0 "콘스탄티녜"
 VICTORY_POINTS_9837:0 "레린"
 VICTORY_POINTS_9843:0 "베이징"
+VICTORY_POINTS_9850:0 "하트퍼드"
 VICTORY_POINTS_9853:0 "페르피냥"
 VICTORY_POINTS_9873:0 "청두"
+VICTORY_POINTS_9874:0 "프리슈티나"
 VICTORY_POINTS_9893:0 "안텝"
+VICTORY_POINTS_9894:0 "모스타르"
 VICTORY_POINTS_9898:0 "몽펠리에"
 VICTORY_POINTS_9904:0 "로마"
 VICTORY_POINTS_9907:0 "피렌체"
@@ -709,10 +748,13 @@ VICTORY_POINTS_10007:0 "로도스"
 VICTORY_POINTS_10024:0 "카르타헤나"
 VICTORY_POINTS_10032:0 "카나자와"
 VICTORY_POINTS_10043:0 "지닝"
+VICTORY_POINTS_10061:0 "메르사마트루"
 VICTORY_POINTS_10062:0 "홍콩"
 VICTORY_POINTS_10068:0 "톈진"
+VICTORY_POINTS_10070:0 "라바트"
 VICTORY_POINTS_10074:0 "팔레르모"
 VICTORY_POINTS_10076:0 "우시"
+VICTORY_POINTS_10081:0 "롤리"
 VICTORY_POINTS_10088:0 "쿠타크"
 VICTORY_POINTS_10106:0 "모술"
 VICTORY_POINTS_10125:0 "나고야"
@@ -722,8 +764,9 @@ VICTORY_POINTS_10156:0 "맘방" #사툰
 VICTORY_POINTS_10177:0 "프라타봉" #바탐방
 VICTORY_POINTS_10199:0 "산다칸"
 VICTORY_POINTS_10201:0 "트링코말리"
-VICTORY_POINTS_10212:0 "코타키나발루"
+VICTORY_POINTS_10212:0 "제셀턴" #Api-Api/Kota Kinabalu
 VICTORY_POINTS_10221:0 "아유타야"
+VICTORY_POINTS_10230:0 "셰르브루크"
 VICTORY_POINTS_10237:0 "발릭파판"
 VICTORY_POINTS_10263:0 "마카사르"
 VICTORY_POINTS_10265:0 "마닐라"
@@ -742,8 +785,10 @@ VICTORY_POINTS_10386:0 "사가잉"
 VICTORY_POINTS_10397:0 "장위안"
 VICTORY_POINTS_10400:0 "프레토리"
 VICTORY_POINTS_10401:0 "라이푸르"
+VICTORY_POINTS_10403:0 "아르다한"
 VICTORY_POINTS_10404:0 "구이린"
 VICTORY_POINTS_10405:0 "플로리아노폴리스"
+VICTORY_POINTS_10407:0 "탤러해시"
 VICTORY_POINTS_10411:0 "니콘사완"
 VICTORY_POINTS_10413:0 "징홍"
 VICTORY_POINTS_10424:0 "구이수이"
@@ -753,6 +798,7 @@ VICTORY_POINTS_10446:0 "신양"
 VICTORY_POINTS_10447:0 "포르투 알레그레"
 VICTORY_POINTS_10472:0 "카르스"
 VICTORY_POINTS_10513:0 "상파울루"
+VICTORY_POINTS_10578:0 "바얀 투멘"
 VICTORY_POINTS_10584:0 "우스트카메노고르스크"
 VICTORY_POINTS_10611:0 "리자이나"
 VICTORY_POINTS_10627:0 "헴벨디르"
@@ -764,19 +810,26 @@ VICTORY_POINTS_10717:0 "캔자스시티"
 VICTORY_POINTS_10724:0 "인촨"
 VICTORY_POINTS_10731:0 "콜럼-베샤르"
 VICTORY_POINTS_10737:0 "카불"
+VICTORY_POINTS_10740:0 "엘패소"
 VICTORY_POINTS_10747:0 "보고타"
 VICTORY_POINTS_10760:0 "무스카트"
 VICTORY_POINTS_10762:0 "산 피드로"
 VICTORY_POINTS_10772:0 "루디아나"
+VICTORY_POINTS_10790:0 "칼리"
+VICTORY_POINTS_10798:0 "오클라호마시티"
 VICTORY_POINTS_10803:0 "아비장"
 VICTORY_POINTS_10831:0 "칼라바르"
+VICTORY_POINTS_10832:0 "칠판싱고"
 VICTORY_POINTS_10836:0 "와가두구"
 VICTORY_POINTS_10837:0 "테헤란"
 VICTORY_POINTS_10840:0 "사나"
 VICTORY_POINTS_10842:0 "케트살테낭고"
+VICTORY_POINTS_10848:0 "에르모시요"
+VICTORY_POINTS_10855:0 "바르키시메토"
 VICTORY_POINTS_10862:0 "아크라"
 VICTORY_POINTS_10886:0 "과테말라 시티"
 VICTORY_POINTS_10906:0 "파라마리보"
+VICTORY_POINTS_10912:0 "쿠마나"
 VICTORY_POINTS_10913:0 "케르만"
 VICTORY_POINTS_10919:0 "노이어하픈"
 VICTORY_POINTS_10921:0 "바르상갈리"
@@ -799,26 +852,31 @@ VICTORY_POINTS_10999:0 "비토리아"
 VICTORY_POINTS_11000:0 "코피아포"
 VICTORY_POINTS_11002:0 "포르토세구로"
 VICTORY_POINTS_11007:0 "포사다스"
-VICTORY_POINTS_11064:0 "스캐퍼 플로"
 VICTORY_POINTS_11105:0 "헬싱키"
 VICTORY_POINTS_11108:0 "포트마우치"
-VICTORY_POINTS_11114:0 "칼스타드"
+VICTORY_POINTS_11136:0 "애버딘"
 VICTORY_POINTS_11159:0 "페트로자보츠크"
 VICTORY_POINTS_11202:0 "프스코프"
 VICTORY_POINTS_11215:0 "칼스크로나"
 VICTORY_POINTS_11225:0 "사마라"
+VICTORY_POINTS_11237:0 "워터퍼드"
 VICTORY_POINTS_11241:0 "비쳅스크"
-VICTORY_POINTS_11253:0 "노리치"
+VICTORY_POINTS_11253:0 "케임브리지"
+VICTORY_POINTS_11279:0 "레스터"
 VICTORY_POINTS_11293:0 "더블린"
 VICTORY_POINTS_11297:0 "헐"
 VICTORY_POINTS_11318:0 "흐로닝언"
+VICTORY_POINTS_11331:0 "뤼베크"
 VICTORY_POINTS_11349:0 "르제프"
 VICTORY_POINTS_11360:0 "빌헬름스하펜"
 VICTORY_POINTS_11366:0 "플렌스부르크"
-VICTORY_POINTS_11370:0 "민스크"
+VICTORY_POINTS_11370:0 "몐스크"
+VICTORY_POINTS_11371:0 "슬라이고"
 VICTORY_POINTS_11375:0 "니즈니노보그라드"
-VICTORY_POINTS_11380:0 "노르셰핑"
+VICTORY_POINTS_11380:0 "노르쾨핑"
+VICTORY_POINTS_11401:0 "라이히헨베르크"
 VICTORY_POINTS_11405:0 "올렉산드롭스크"
+VICTORY_POINTS_11411:0 "스타니스와부프"
 VICTORY_POINTS_11417:0 "뷔르츠부르크"
 VICTORY_POINTS_11435:0 "비트부르크"
 VICTORY_POINTS_11437:0 "카테리노슬라프"
@@ -835,6 +893,7 @@ VICTORY_POINTS_11535:0 "캉"
 VICTORY_POINTS_11537:0 "우랄스크"
 VICTORY_POINTS_11542:0 "프라하"
 VICTORY_POINTS_11544:0 "뉘른베르크"
+VICTORY_POINTS_11546:0 "미콜라이우"
 VICTORY_POINTS_11548:0 "칼레"
 VICTORY_POINTS_11560:0 "마인츠"
 VICTORY_POINTS_11561:0 "크리비리흐"
@@ -844,17 +903,27 @@ VICTORY_POINTS_11564:0 "리예카"
 VICTORY_POINTS_11581:0 "자그레브"
 VICTORY_POINTS_11584:0 "베네치아"
 VICTORY_POINTS_11586:0 "베오그라드"
+VICTORY_POINTS_11590:0 "로잔"
+VICTORY_POINTS_11597:0 "도브리치"
 VICTORY_POINTS_11610:0 "페치"
+VICTORY_POINTS_11617:0 "수후미"
 VICTORY_POINTS_11654:0 "버팔로"
 VICTORY_POINTS_11659:0 "데브레첸"
 VICTORY_POINTS_11666:0 "빈"
 VICTORY_POINTS_11670:0 "오데사"
+VICTORY_POINTS_11674:0 "간자"
+VICTORY_POINTS_11691:0 "운그바르"
+VICTORY_POINTS_11699:0 "포"
 VICTORY_POINTS_11707:0 "오비에도"
 VICTORY_POINTS_11746:0 "아다나"
 VICTORY_POINTS_11747:0 "앙카라"
 VICTORY_POINTS_11752:0 "장베이"
+VICTORY_POINTS_11753:0 "리제"
 VICTORY_POINTS_11771:0 "묵던"
 VICTORY_POINTS_11773:0 "칼리아리"
+VICTORY_POINTS_11782:0 "트렌턴"
+VICTORY_POINTS_11785:0 "해리스버그"
+VICTORY_POINTS_11787:0 "너지베치케레크"
 VICTORY_POINTS_11800:0 "피츠버그"
 VICTORY_POINTS_11805:0 "리스본"
 VICTORY_POINTS_11818:0 "테살로니키"
@@ -879,7 +948,10 @@ VICTORY_POINTS_11932:0 "나하"
 VICTORY_POINTS_11936:0 "타인호아"
 VICTORY_POINTS_11954:0 "벵가지"
 VICTORY_POINTS_11969:0 "튀니스"
+VICTORY_POINTS_11974:0 "아시우트"
 VICTORY_POINTS_11984:0 "레프코샤"
+VICTORY_POINTS_11987:0 "페스"
+VICTORY_POINTS_11999:0 "아스완"
 VICTORY_POINTS_12003:0 "발레타" #몰타
 VICTORY_POINTS_12038:0 "알메리아"
 VICTORY_POINTS_12051:0 "콩스탕틴"
@@ -903,10 +975,8 @@ VICTORY_POINTS_12190:0 "딜리"
 VICTORY_POINTS_12201:0 "수라타니"
 VICTORY_POINTS_12213:0 "아파리"
 VICTORY_POINTS_12220:0 "쁘라쭈압키리칸"
-VICTORY_POINTS_12334:0 "주이스지포라"
 VICTORY_POINTS_12237:0 "라에"
 VICTORY_POINTS_12238:0 "파안"
-VICTORY_POINTS_12351:0 "산 니콜라스 데 로스 아로요스"
 VICTORY_POINTS_12256:0 "퉁구"
 VICTORY_POINTS_12268:0 "팔렘방"
 VICTORY_POINTS_12289:0 "프레더릭턴"
@@ -914,10 +984,13 @@ VICTORY_POINTS_12295:0 "콜하푸르"
 VICTORY_POINTS_12299:0 "싱가포르" #싱가포르
 VICTORY_POINTS_12304:0 "킹스톤"
 VICTORY_POINTS_12320:0 "예레반"
+VICTORY_POINTS_12334:0 "주이스지포라"
 VICTORY_POINTS_12335:0 "모니와"
 VICTORY_POINTS_12338:0 "다르질링"
+VICTORY_POINTS_12351:0 "산 니콜라스 데 로스 아로요스"
 VICTORY_POINTS_12357:0 "밀워키"
 VICTORY_POINTS_12360:0 "콘깬"
+VICTORY_POINTS_12361:0 "제퍼슨시티"
 VICTORY_POINTS_12364:0 "부에노스아이레스"
 VICTORY_POINTS_12366:0 "가우하티"
 VICTORY_POINTS_12371:0 "홀랜디아"
@@ -932,18 +1005,23 @@ VICTORY_POINTS_12438:0 "히베이랑프레투"
 VICTORY_POINTS_12440:0 "리베라"
 VICTORY_POINTS_12446:0 "토요하라"
 VICTORY_POINTS_12453:0 "콘셉시온델우루과이"
+VICTORY_POINTS_12456:0 "매디슨"
 VICTORY_POINTS_12459:0 "뱅고르"
 VICTORY_POINTS_12465:0 "히바"
 VICTORY_POINTS_12467:0 "한양"
 VICTORY_POINTS_12473:0 "할렙"
 VICTORY_POINTS_12489:0 "리틀록"
+VICTORY_POINTS_12497:0 "스프링필드"
 VICTORY_POINTS_12501:0 "내슈빌"
 VICTORY_POINTS_12505:0 "세인트존스"
 VICTORY_POINTS_12518:0 "오호츠크"
+VICTORY_POINTS_12520:0 "흐브드"
+VICTORY_POINTS_12552:0 "산타페"
 VICTORY_POINTS_12559:0 "니콜라옙스크"
 VICTORY_POINTS_12583:0 "비슈케크"
 VICTORY_POINTS_12586:0 "오마하"
 VICTORY_POINTS_12589:0 "케이프타운"
+VICTORY_POINTS_12620:0 "피어"
 VICTORY_POINTS_12674:0 "레이캬비크"
 VICTORY_POINTS_12725:0 "포트수단"
 VICTORY_POINTS_12727:0 "리야드"
@@ -952,18 +1030,21 @@ VICTORY_POINTS_12735:0 "버밍험"
 VICTORY_POINTS_12738:0 "레온"
 VICTORY_POINTS_12747:0 "볼라마"
 VICTORY_POINTS_12751:0 "바마코"
+VICTORY_POINTS_12753:0 "툭스틀라"
 VICTORY_POINTS_12758:0 "메디나"
 VICTORY_POINTS_12763:0 "페샤와르"
 VICTORY_POINTS_12766:0 "아스마라"
 VICTORY_POINTS_12782:0 "샌안토니오"
-VICTORY_POINTS_12790:0 "카르타헤나"
+VICTORY_POINTS_12790:0 "바랑키야"
 VICTORY_POINTS_12798:0 "키토"
+VICTORY_POINTS_12804:0 "두랑고"
 VICTORY_POINTS_12806:0 "하르툼"
 VICTORY_POINTS_12810:0 "베라크루스"
 VICTORY_POINTS_12812:0 "베르더"
 VICTORY_POINTS_12823:0 "산살바도르"
 VICTORY_POINTS_12835:0 "몬테레이"
 VICTORY_POINTS_12853:0 "벨렝"
+VICTORY_POINTS_12872:0 "키브도"
 VICTORY_POINTS_12878:0 "리몬"
 VICTORY_POINTS_12883:0 "지다"
 VICTORY_POINTS_12885:0 "카옌"
@@ -989,9 +1070,10 @@ VICTORY_POINTS_13011:0 "랭스"
 VICTORY_POINTS_13021:0 "타라와"
 VICTORY_POINTS_13025:0 "모토야마"
 VICTORY_POINTS_13028:0 "야프"
+VICTORY_POINTS_13036:0 "산티아고아펜"
 VICTORY_POINTS_13038:0 "나우루"
-VICTORY_POINTS_13041:0 "콰잘렌"
-VICTORY_POINTS_13046:0 "에니웨톡"
+VICTORY_POINTS_13039:0 "자보르"
+VICTORY_POINTS_13041:0 "멘츠이코프"
 VICTORY_POINTS_13047:0 "웨이크"
 VICTORY_POINTS_13052:0 "미드웨이"
 VICTORY_POINTS_13081:0 "샤를루아"
@@ -1014,6 +1096,11 @@ VICTORY_POINTS_13357:0 "산타렝"
 VICTORY_POINTS_13379:0 "마카파"
 VICTORY_POINTS_13403:0 "호라이마"
 VICTORY_POINTS_13437:0 "마나과"
+VICTORY_POINTS_13451:0 "오아하카"
+VICTORY_POINTS_13457:0 "캄페체"
+VICTORY_POINTS_13462:0 "메리다"
+VICTORY_POINTS_13469:0 "라파스"
+VICTORY_POINTS_13493:0 "티후아나"
 VICTORY_POINTS_13499:0 "발파라이소"
 VICTORY_POINTS_13502:0 "라세레나"
 VICTORY_POINTS_13508:0 "칼라마"
@@ -1029,6 +1116,7 @@ VICTORY_POINTS_13551:0 "잔지바르스타드"
 VICTORY_POINTS_13575:0 "그라츠"
 VICTORY_POINTS_13601:0 "누크"
 VICTORY_POINTS_13604:0 "몬로비아"
+VICTORY_POINTS_13631:0 "스카파 플로우"
 VICTORY_POINTS_13641:0 "은고마"
 VICTORY_POINTS_13648:0 "몽구"
 VICTORY_POINTS_13659:0 "브뤼허"
@@ -1038,9 +1126,11 @@ VICTORY_POINTS_13669:0 "칭타우"
 VICTORY_POINTS_13670:0 "웨이하이웨이"
 VICTORY_POINTS_13671:0 "카토비츠"
 VICTORY_POINTS_13674:0 "아레키파"
+VICTORY_POINTS_13681:0 "파나마시티"
 VICTORY_POINTS_13683:0 "다비드"
 VICTORY_POINTS_13688:0 "마타갈파"
 VICTORY_POINTS_13693:0 "푸에르토렘피라"
 VICTORY_POINTS_13696:0 "산페드로술라"
 VICTORY_POINTS_13697:0 "산 미겔"
 VICTORY_POINTS_13707:0 "난통"
+VICTORY_POINTS_13709:0 "카프아이시앵"
