번역완료/누락기호수정

--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -269,7 +269,7 @@ bulgaria.16.b:0 "우리는 그 계획을 지지하지 않을 것이다."
 bulgaria.17.t:0 "[BUL.GetName]와(과)의 관계?"
 bulgaria.17.d:0 "[BUL.GetAdjective]가 우리 양국간의 관계를 촉진시키기 위해 우리에게 접근한 것처럼 보입니다. 대표단이 우리에게 더 많은 유대를 요청하며, 그것은 특히 현재의 격동적인 기후에서 양국 모두에게 유용할 것이라고 주장하며, 수적으로 안전성이 있다고 주장했다. [BUL.GetName]와의 제휴는 유용할 수 있지만 실제로 세계대전에서 우리와 싸우며 적대적인 국가들에 둘러싸여 있습니다. 우리는 어떻게 해야 할까요?"
 bulgaria.17.a:0 "그들의 접근을 승락한다."
-bulgaria.17.b:0 "그들의 접근을 거절한다.
+bulgaria.17.b:0 "그들의 접근을 거절한다."
 
 bulgaria.18.t:0 "[From.GetNameDefCap]이(가) 락하다!"
 bulgaria.18.d:0 "고맙게도, 러시아는 양국 간의 긴밀한 협력과 유대 관계를 위해 우리의 접근을 받아들이기로 결정했습니다. 이것은 좋은 소식입니다. 우리가 지금 우리의 이익을 위해 조심할 수 있는 강력한 동맹국이 있다고 안전하게 말할 수 있기 때문입니다."
