--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -1665,7 +1665,7 @@ ire.237.a:0 "훌륭하군!"
 ire.238.t:0 "아일랜드와 제국 조약"
 ire.238.d:0 "아일랜드 독립 이후 아일랜드와 독일 간의 교역 관계가 강해지고 있는 반면, 아일랜드는 여전히 중립을 유지하는 것을 선호하면서, 제국 조약 경제에서 다소 벗어나 있었습니다. 아일랜드가 이제 제국 조약과 더욱 긴밀한 관계를 맺고 있기 때문에 아일랜드 경제는 이익을 보고 있습니다."
 ire.238.a:0 "훌륭하군!"
-ire.239.t:0 검은 월요일이 끝나다!"
+ire.239.t:0 "검은 월요일이 끝나다!"
 ire.239.d:0 "긴 시간이 흐른 후, 우리 정부의 경제적, 외교적 행동으로 아일랜드 경제는 마침내 검은 월요일에서 회복되었습니다!"
 ire.239.a:0 "드디어!"
 ire.240.t:0 검은 월요일이 끝나다!"
