번역완료/글자대체

--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -870,7 +870,7 @@ VICTORY_POINTS_11331:0 "뤼베크"
 VICTORY_POINTS_11349:0 "르제프"
 VICTORY_POINTS_11360:0 "빌헬름스하펜"
 VICTORY_POINTS_11366:0 "플렌스부르크"
-VICTORY_POINTS_11370:0 "몐스크"
+VICTORY_POINTS_11370:0 "멘스크"
 VICTORY_POINTS_11371:0 "슬라이고"
 VICTORY_POINTS_11375:0 "니즈니노보그라드"
 VICTORY_POINTS_11380:0 "노르쾨핑"
